<resources>
    <string name="app_name">GladiatorSimulator v0.3</string>
    <string name="login_text">Sign in</string>
    <string name="forgotpassword_text">Forgot password</string>
    <string name="register_text">Sign up</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="regform">Registration Form</string>
    <string name="repassword">Reenter the password:</string>
    <string name="logoimg">Logo image</string>
    <string name="facebook_app_id">189268738095311</string>
</resources>
